fix: corrigindo direcionamento de link

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                     <div class="tags-linguagens">
                         <span class="tag">Java</span>
                         <span class="tag">MySQL</span>
-                        <span class="tag">Maven</span>
+                        <span class="tag">Angular</span>
                     </div>
 
-                    <a href="https://github.com/cinderDesenv/lojaTerminal_CRUD"
+                    <a href="https://github.com/cinderDesenv/management_it"
                        target="_blank" class="link-repo">
                         <i class="fab fa-github"></i> Repositório
                     </a>
