--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="img/fotoElton.jpg" alt="Foto de Elton Barbosa, Desenvolvedor Front-end e Java" class="foto-perfil">
 
         <h1>Elton Barbosa</h1>
-        <p class="cabecalho-sub-titulo">Desenvolvedor Front-end & Java</p>
+        <p class="cabecalho-sub-titulo">Desenvolvedor Fullstack</p>
 
         <div class="botoes-acao">
             <a href="#projetos" class="botao-primario">Ver Projetos <i class="fas fa-arrow-right"></i></a>
